hphp/test/zend/good/tests/classes/private_004.php.expectf
Call show()

Fatal error: Call to private method pass::show() from context 'fail' in %s/private_004.php on line 15
